# AetherLink

./: .gitignore  README.md
aetherlink-fc-agent/: .gitignore  CMakeLists.txt
aetherlink-fc-agent/certs/: ca.crt  ca.key  client.crt  client.csr  client.key  server.crt  server.csr  server.key
aetherlink-fc-agent/proto/: telemetry.proto
aetherlink-fc-agent/src/: MavlinkManager.cpp  MavlinkManager.h  SecureTransmitter.cpp  SecureTransmitter.h  SerializationManager.cpp  SerializationManager.h  main.cpp
aetherlink-gs-backend/: go.mod  main.go
aetherlink-gs-backend/proto/: telemetry.proto
